--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.469.0",
     "pinia": "^2.2.6",
+    "radix-vue": "^1.9.11",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
